syntax = "proto3";

package auth;

service AuthService {
  rpc ValidateUser(ValidationData) returns (UserData) {}
}

message ValidationData {
  string access_token = 1;
}

message UserData {
  string sub = 1;
  string email = 2;
  int32 iat = 3;
  int32 exp = 4;
}